--- a/tomcrusie.html
+++ b/tomcrusie.html
@@ -2,3 +2,9 @@
   <hi>tomcrusie</hi>
 </center>
 <hr>
+
+<p>
+  Thomas Cruise Mapother IV (born July 3, 1962) is an American actor and producer. Regarded as a Hollywood icon,[1][2][3] he has received various accolades, including an Honorary Palme d'Or and three Golden Globe Awards, in addition to nominations for four Academy Awards. His films have grossed over $5 billion 
+</p>
+
+
